--- a/database.bib
+++ b/database.bib
@@ -78,3 +78,13 @@
     doi = {10.1109/CCNC.2014.6940497},
     month = {January}
 }
+@Book{MiMa18,
+    author = {Micheloni, Rino and Marelli, A. and Eshghi, Kam},
+    title = {Inside Solid State Drives (SSDs)},
+    publisher = {Springer},
+    year = {2018},
+    edition = {2},
+    volume = {37},
+    doi = {10.1007/978-981-13-0599-3},
+    isbn = {9789811305986, 9789811305993}
+}
