--- a/database.bib
+++ b/database.bib
@@ -88,3 +88,26 @@
     doi = {10.1007/978-981-13-0599-3},
     isbn = {9789811305986, 9789811305993}
 }
+@Artice{WuSo10,
+    author = {X. Wu and Y. Song and M. Jiang and C. Zhao},
+    journal = {IEEE Communications Letters},
+    title = {Adaptive-Normalized/Offset Min-Sum Algorithm},
+    year = {2010},
+    volume = {14},
+    number = {7},
+    pages = {667-669},
+    doi = {10.1109/LCOMM.2010.07.100508},
+    month = {July}
+}
+@Article{RiTo98,
+    author={B. Ricco and G. Torelli and M. Lanzoni and A. Manstretta and H. E. Maes and D. Montanari and A. Modelli}, 
+    journal={Proceedings of the IEEE}, 
+    title={Nonvolatile multilevel memories for digital applications}, 
+    year={1998}, 
+    volume={86}, 
+    number={12}, 
+    pages={2399-2423},
+    doi={10.1109/5.735448}, 
+    ISSN={0018-9219}, 
+    month={December}
+}
