--- a/database.bib
+++ b/database.bib
@@ -111,3 +111,19 @@
     ISSN={0018-9219}, 
     month={December}
 }
+@Techreport{wey_3ca_1a_0118,
+    author={Zheng Liu and Junwen Zhang and Jun Shan Wey},
+    key={802.3ca},
+    month={January},
+    year={2018},
+    title={FEC for Upstream: 8K LDPC Code},
+    url={http://www.ieee802.org/3/ca/public/meeting_archive/2018/01/wey_3ca_1a_0118.pdf}
+}
+@manual{ETSI_EN_302_307,
+    organization = {ETSI},
+    title = {Digital Video Broadcasting (DVB); Second generation framing structure, channel coding and modulation systems for Broadcasting, Interactive Services, News Gathering and other broadband satellite applications (DVB-S2)},
+    number = {ETSI EN 302 307},
+    year = {2009},
+    month = {August},
+    note = {V1.2.1}
+}
