--- a/database.bib
+++ b/database.bib
@@ -127,3 +127,35 @@
     month = {August},
     note = {V1.2.1}
 }
+@Article{Ec96,
+    author={PIERRE L’ECUYER}, 
+    journal={MATHEMATICS OF COMPUTATION}, 
+    title={MAXIMALLY EQUIDISTRIBUTED COMBINED TAUSWORTHE GENERATORS}, 
+    year={1996}, 
+    volume={65}, 
+    number={213}, 
+    pages={203-213},
+    month={January}
+}
+@Artice{LeVi06,
+    author = {Dong-U Lee and John D. Villasenor and Wayne Luk and Philip H. W. Leong},
+    journal = {IEEE Transactions on Computers},
+    title = {A hardware Gaussian noise generator using the Box-Muller method and its error analysis},
+    year = {2006},
+    volume = {55},
+    number = {6},
+    pages = {659-671},
+    doi = {10.1109/TC.2006.81}, 
+    ISSN = {0018-9340},
+    month = {June}
+}
+@Article{Th14,
+    author = {D. B. Thomas}, 
+    booktitle = {2014 IEEE 22nd Annual International Symposium on Field-Programmable Custom Computing Machines}, 
+    title = {FPGA Gaussian Random Number Generators with Guaranteed Statistical Accuracy}, 
+    year = {2014}, 
+    pages = {149-156}, 
+    doi = {10.1109/FCCM.2014.47}, 
+    month = {May},
+    url = {http://cas.ee.ic.ac.uk/people/dt10/research/rngs-fpga-normal.html}
+} 
