--- a/implementation.tex
+++ b/implementation.tex
@@ -223,5 +223,17 @@ In and output double buffering
 More pipeline stages
 u no dependency optimization
 
+\section{Data Source}
+For evaluating the whole pipeline a source of data to be encoded is required. I used a uniform random number generator. The numbers were generated using a Tausworthe generator\cite{Ec96}. I implemented it in a straightforward manner in VHDL. There were no difficulties as it consists of static shifts and bit boolean operators.
+
+\section{Channel Model}
+To test an error correction scheme a source of errors is required. This would usually be the flash memory in an solid state drive, but here I simulate it using gaussian noise. The gaussian noise is generated with the Box-Muller method using the hardware approach from Dong-U Lee, John D. Villasenor and Wayne Luk and Philip H. W. Leong\cite{LeVi06}. Here I used Vivado HLS to create the hardware. The Box-Muller method requires fixed point numbers and with high level synthesis it is very fast to write the code for such a noise generator.
+
+My tests concluded the Box Muller method is to hardware intensive when build with high level synthesis. I used a very efficient design by David B. Thomas\cite{Th14} which uses less resources of the FPGA. The class of gaussian number generators described in Thomas paper have different qualities depending on the internal bitwidths. I chose the one with the highest quality as it is smaller than my Box-Muller implementation. To interface with my existing design I wrote an axi stream frontend to simply replace the other number generator. The Box-Muller method used for example 6845 LUTs compared to ~683 LUTs for this method.
+
+\section{Result Accumulation}
+
+\section{Control}
+The whole system is controlled by the ARM core of the SoC. All the inputs are 
 
 circuitry
